Move to Makefile

--- a/.github/workflows/collector_test.yml
+++ b/.github/workflows/collector_test.yml
@@ -22,7 +22,4 @@ jobs:
         run: |
           cd collector
           go install github.com/cilium/ebpf/cmd/bpf2go@v0.12.3
-          go generate ./...
-          go fmt ./...
-          go vet ./...
-          go test ./...
+          make fmt vet test build
