--- a/collector/Makefile
+++ b/collector/Makefile
@@ -13,6 +13,8 @@ generate:
 	go generate ./...
 
 build: generate
-	go build -a -o bin/compass-collector github.com/skpr/compass/collector/cmd/compass-collector
+	go build -a -o _output/compass-collector github.com/skpr/compass/collector/cmd/compass-collector
+	go build -a -buildmode=plugin -o /_output/plugin/cache.so github.com/skpr/compass/collector/plugin/cache
+	go build -a -buildmode=plugin -o /_output/plugin/stdout.so github.com/skpr/compass/collector/plugin/stdout
 
 .PHONY: *
