--- a/.github/workflows/collector_build.yml
+++ b/.github/workflows/collector_build.yml
@@ -4,7 +4,7 @@ on:
   push
 
 jobs:
-  collector_build:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: ⬇️ Git clone the repository
