--- a/collector/Makefile
+++ b/collector/Makefile
@@ -14,6 +14,7 @@ generate:
 
 build: generate
 	go build -a -o _output/compass-collector github.com/skpr/compass/collector/cmd/compass-collector
+	go build -a -o _output/compass-find-lib github.com/skpr/compass/collector/cmd/compass-find-lib
 	go build -a -buildmode=plugin -o _output/plugin/cache.so github.com/skpr/compass/collector/plugin/cache
 	go build -a -buildmode=plugin -o _output/plugin/stdout.so github.com/skpr/compass/collector/plugin/stdout
 
