--- a/collector/Makefile
+++ b/collector/Makefile
@@ -17,5 +17,6 @@ build: generate
 	go build -a -o _output/compass-find-lib github.com/skpr/compass/collector/cmd/compass-find-lib
 	go build -a -buildmode=plugin -o _output/plugin/cache.so github.com/skpr/compass/collector/plugin/cache
 	go build -a -buildmode=plugin -o _output/plugin/stdout.so github.com/skpr/compass/collector/plugin/stdout
+	go build -a -buildmode=plugin -o _output/plugin/noop.so github.com/skpr/compass/collector/plugin/noop
 
 .PHONY: *
