Adds performance testing

--- a/.github/workflows/collector_build.yml
+++ b/.github/workflows/collector_build.yml
@@ -1,7 +1,8 @@
 name: "📋 Collector: Build and Test"
 
 on:
-  push
+  pull_request:
+    types: [ synchronize, opened, reopened, ready_for_review ]
 
 jobs:
   build:
