--- a/.github/workflows/performance_test.yml
+++ b/.github/workflows/performance_test.yml
@@ -67,6 +67,12 @@ jobs:
           results=$(cat ${K6_RESULTS_DIR}/comment.txt)
           echo "results=$results" >> "$GITHUB_OUTPUT"
 
+      - name: 📋 Print Logs
+        if: fail()
+        run: |
+          docker compose logs nginx
+          docker compose logs php-fpm
+
       - name: 📋 Post Test Results to Comment
         uses: peter-evans/create-or-update-comment@v4
         if: always()
