--- a/.github/workflows/performance_test.yml
+++ b/.github/workflows/performance_test.yml
@@ -90,7 +90,7 @@ jobs:
         with:
           name: results
           path: |
-            ${K6_RESULTS_DIR}
+            performance-testing/results
 
       - name: 📋 Post Test Results to Comment
         uses: peter-evans/create-or-update-comment@v4
