--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
 
   ##################
@@ -7,7 +5,7 @@ services:
   ##################
 
   nginx:
-    build: ./docker/compose/nginx
+    image: ${IMAGE_NGINX:-localhost/compass:nginx-latest}
     ports:
       - 8080:8080
       - 3306:3306
@@ -19,7 +17,7 @@ services:
       - temporary-files:/mnt/temporary
 
   php-fpm:
-    build: ./docker/compose/php-fpm
+    image: ${IMAGE_PHP_FPM:-localhost/compass:php-fpm-latest}
     network_mode: service:nginx
     volumes:
       - public-files:/data/app/sites/default/files
@@ -33,6 +31,20 @@ services:
   mysql-default:
     image: docker.io/skpr/mysql-empty:8.x-v3-edge
     network_mode: service:nginx
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      interval: 1s
+      retries: 60
+
+  ##################
+  # Databases
+  ##################
+
+  collector:
+    image: localhost/compass:collector-latest
+    privileged: true
+    pid: host
+    profiles: [collector]
 
 volumes:
   public-files: {}
