Fix the Dockerfile

--- a/collector/Dockerfile
+++ b/collector/Dockerfile
@@ -17,6 +17,8 @@ RUN apk add bpftrace
 ADD docker/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
+ADD compass.bt /compass.bt
+
 ENV COMPASS_PROCESS_NAME=php-fpm
 
 CMD ["/entrypoint.sh"]
