--- a/collector/Makefile
+++ b/collector/Makefile
@@ -1,10 +1,7 @@
 #!/usr/bin/make -f
 
-fmt: generate
-	go fmt ./...
-
-vet: generate
-	go vet ./...
+lint: generate
+	revive -set_exit_status -exclude=./vendor/... ./...
 
 test: generate
 	go test ./...
