Don't think this will work first time

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,19 +76,11 @@ jobs:
 
       - name: 📦 Build Images
         run: |
-          docker build -t localhost/compass:nginx-latest docker/compose/nginx
-          docker build -t localhost/compass:php-fpm-latest docker/compose/php-fpm
-          docker build --no-cache --build-arg=PHP_VERSION=8.3 -t localhost/compass:extension-latest extension
-          docker build -t localhost/compass:php-fpm-ext-latest docker/compose/php-fpm-ext
-          docker build --no-cache --build-arg=PHP_VERSION=8.3 -t localhost/compass:collector-latest collector
+          make build
 
       - name: 📦 Setup
         run: |
-          docker compose up -d --wait
-          docker compose exec --user=root php-fpm chown skpr:skpr /data/app/sites/default/files
-          docker compose exec --user=root php-fpm chown skpr:skpr /mnt/private
-          docker compose exec --user=root php-fpm chown skpr:skpr /mnt/temporary
-          docker compose exec -e PHP_MEMORY_LIMIT=512M php-fpm vendor/bin/drush si demo_umami
+          DOCKER_COMPOSE_PROFILE=no-collector EXTENSION_INSTALLED=false EXTENSION_ENABLED=false make up install
 
       # Uncomment for CPU / Memory / IO statistics.
       # - name: Collect Workflow Telemetry
@@ -100,8 +92,7 @@ jobs:
 
       - name: ⚙️ Install Extension + Not Enabled
         run: |
-          docker compose stop
-          IMAGE_PHP_FPM=localhost/compass:php-fpm-ext-latest COMPASS_ENABLED=false docker compose up -d --wait
+          DOCKER_COMPOSE_PROFILE=no-collector EXTENSION_ENABLED=false make stop up
 
       - name: 🧪 K6 - Execute Extension Installed (Not Enabled) Performance Test
         run: |
@@ -109,8 +100,7 @@ jobs:
 
       - name: ⚙️ Enable Extension
         run: |
-          docker compose stop
-          IMAGE_PHP_FPM=localhost/compass:php-fpm-ext-latest docker compose up -d --wait
+          DOCKER_COMPOSE_PROFILE=no-collector make stop up
 
       - name: 🧪 K6 - Execute Extension Enabled Performance Test
         run: |
@@ -118,7 +108,7 @@ jobs:
 
       - name: ⚙️ Enable Collector
         run: |
-          IMAGE_PHP_FPM=localhost/compass:php-fpm-ext-latest docker compose --profile collector up -d --wait
+          make up
 
       - name: 🧪 K6 - Execute Collector Enabled Performance Test
         run: |
